Added counter API and recall and recent history API.